--- a/android/app/src/main/res/values-so/strings.xml
+++ b/android/app/src/main/res/values-so/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="exposure_notification_channel_description">Digniino ogeysiis soogaaritaanno</string>
   <string name="exposure_notification_channel_name">Ogeysiinta Ufeydsanku</string>
+  <string name="exposure_notification_message">Qof adiga kaa ogdhowaa ayaa laga helay COVID-19. Taabo si aad u hesho faahfaahin dheeraad ah.</string>
   <string name="exposure_notification_title">Ufeydsanaan COVID-19 suurtagal ah</string>
 </resources>
