--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -273,6 +273,14 @@
     "terms_header_title": "Terms of use",
     "welcome_image_label": "An illustration of people with masks on, connected like nodes in a network."
   },
+  "settings": {
+    "share_anonymized_data": "Share Anonymized Data",
+    "share_anonymized_data_para": "Your anonymous data helps the {{healthAuthorityName}} Commission analyze, track, and contain the spread of COVID-19. Your data will be aggregated that from other PathCheck users who choose to share.\n\nYour data contains your survey responses and zipcode, but no additional or personally-identifying information.\n\n The {{healthAuthorityName}} will retain your anonymous data for a specific period of time.",
+    "i_understand_and_consent": "I Understand and Consent",
+    "share_anonymized_data_disclaimer": "By proceeding, you agree to share anonymized answers to screening quesitons with the {{healthAuthorityName}}",
+    "please_view_privacy_policy": "Please view their privacy policy",
+    "here": "here"
+  },
   "report_issue": {
     "body": "Feedback (required)",
     "email": "Email (required)",
