Add segmented control for symptoms log
Why:
----

As a user, I would like to be able to see my symptom log in addition to
the symptoms I logged today.

This commit:
----

- Add react-native-segmented-control library
- Add first draft of SymptomLogContext
- Add OverTime screen to show symptom log
- Add spec for OverTime screen
- Rename SymptomChecker to MyHealth
- Rename CheckIn to Today

Reviewers:
----

- The SymptomLogContext is not hooked up to the native layer, so we are
  just using placeholders for now for that data
- Next steps involve creating the rest of the actions for the symptom
  log and implementing all of the UI

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -318,6 +318,14 @@
     "symptoms": "Symptoms",
     "what_symptoms": "What symptoms are you experiencing?"
   },
+  "my_health": {
+    "today": "Today",
+    "over_time": "Over Time",
+    "symptom_log": {
+      "feeling_well": "You were feeling well",
+      "feeling_not_well": "You were not feeling well"
+    }
+  },
   "symptoms": {
     "body_aches": "Body aches",
     "chest_pain_or_pressure": "Chest pain or pressure",
