--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -305,6 +305,7 @@
     "find_a_test_center": "Find a test center",
     "follow_ha_guidance": "Based on your symptoms, it does not seem like you have COVID-19.",
     "sorry_not_feeling_well": "Sorry you're not feeling well. Your symptoms may be related to COVID-19.",
+    "success_message": "Symptoms saved!",
     "get_tested": "We recommend you get tested for COVID-19.",
     "glad_to_hear_it": "Glad to hear it!",
     "good": "Good",
