--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -324,7 +324,8 @@
     "what_symptoms": "What symptoms are you experiencing?",
     "delete_entry": "Delete entry",
     "entry_deleted": "Entry deleted",
-    "log_symptoms": "Log symptoms"
+    "log_symptoms": "Log symptoms",
+    "check_in_again": "Check in again tomorrow."
   },
   "my_health": {
     "today": "Today",
