--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -331,6 +331,8 @@
     "log_symptoms": "Log symptoms",
     "check_in_again": "Check in again tomorrow.",
     "no_symptom_history": "No symptom history",
+    "last_14_days": "LAST 14 DAYS",
+    "history": "HISTORY",
     "errors": {
       "adding_check_in": "Sorry, we could not add todays check in",
       "adding_symptoms": "Sorry, we could not log your symptoms",
