Support metric system units
Why:
Currently we only have support for units using the imperial system. We
would like for the app to be able to support metric units.

This commit:
Adds a configuration based of an environment variable for setting the
measurement system to either metric or imperial. If metric is not
provided, we default to imperial.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -81,6 +81,7 @@
   "exposure_history": {
     "check_for_exposures": "Check for exposures",
     "exposure_detail": {
+      "2m_apart": "2m apart",
       "6ft_apart": "6ft apart",
       "general_guidance": "General Guidance",
       "ha_guidance_header": "What should I do?",
@@ -102,6 +103,7 @@
       "six_feet_apart": "Stay 6 feet apart",
       "stay_home": "Stay home when sick",
       "title": "Health Guidelines",
+      "two_meters_apart": "Stay 2 meters apart",
       "wash_your_hands": "Wash your hands often",
       "wear_a_mask": "Wear a mask"
     },
