--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -302,7 +302,7 @@
       "follow_cdc_guidance": "If you develop symptoms, follow CDC guidance.",
       "guidance": "Guidance",
       "how_to_care_for_yourself_and_others": "How to care for yourself and others while sick with COVID-19 symptoms:",
-      "if_symptoms_develop": "If you develop any of these symptoms or if you start to feel worse, call your healthcare provider, clinician advice line, or telemedicine provider.",
+      "if_symptoms_develop": "If you develop any COVID-19 symptoms or if you start to feel worse, call your healthcare provider, clinician advice line, or telemedicine provider.",
       "may_help_you_feel_better": "Here are some steps that may help you feel better:",
       "monitor_your_symptoms": "Sorry you’re feeling ill. Stay at home and monitor your symptoms. Call your provider if you get worse symptoms, stay at home.",
       "practice_social_distancing": "Practice social distancing.",
